--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.3",
-    "angular-local-storage": "~0.2.2"
+    "angular": "1.4.3",
+    "angular-ui-router": "0.2.13",
+    "angular-animate": "1.4.3",
+    "angular-sanitize": "1.4.3",
+    "ionic": "~1.0.1",
+    "angular-socket-io": "~0.7.0",
+    "angular-resource": "~1.4.3",
+    "ngCordova": "~0.1.20-alpha"
+  },
+  "install": {
+    "path": "src/libs"
   }
 }
