--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "controler",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "dependencies": {
+    "body-parser": "^1.12.4",
     "browser-sync": "^2.8.2",
     "chai": "^3.2.0",
+    "ejs": "^2.3.1",
+    "express": "^4.12.3",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
@@ -13,8 +20,13 @@
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.0",
+    "method-override": "^2.3.3",
     "mocha": "^2.2.5",
-    "phantomjs": "^1.9.17"
+    "mongoose": "^4.0.4",
+    "phantomjs": "^1.9.17",
+    "socket.io": "^1.3.5",
+    "stringify": "^3.1.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "gulp": "~3.9.0",
@@ -22,9 +34,5 @@
   },
   "engines": {
     "node": ">=0.10.0"
-  },
-  "scripts": {
-    "init": "npm install",
-    "install": "bower install"
   }
 }
