--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "body-parser": "^1.12.4",
     "browser-sync": "^2.8.2",
     "chai": "^3.2.0",
+    "cors": "^2.7.1",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-jwt": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "jshint-stylish": "^2.0.1",
+    "jsonwebtoken": "^5.0.4",
     "karma": "^0.13.3",
     "karma-chai": "^0.1.0",
     "karma-mocha": "^0.2.0",
