--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-jwt": "^3.0.1",
+    "express-session": "^1.11.3",
+    "express-socket.io-session": "^1.3.1",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
@@ -25,6 +27,7 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "method-override": "^2.3.3",
     "mocha": "^2.2.5",
+    "moment": "^2.10.6",
     "mongoose": "^4.0.4",
     "phantomjs": "^1.9.17",
     "socket.io": "^1.3.5",
