--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,9 @@
     "ionic": "~1.0.1",
     "angular-socket-io": "~0.7.0",
     "angular-resource": "~1.4.3",
-    "ngCordova": "~0.1.20-alpha"
+    "ngCordova": "~0.1.20-alpha",
+    "angularfire": "~1.1.2",
+    "ionicons": "~2.0.1"
   },
   "install": {
     "path": "src/libs"
