--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.7.1",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
+    "express-favicon": "^1.0.1",
     "express-jwt": "^3.0.1",
     "express-session": "^1.11.3",
     "express-socket.io-session": "^1.3.1",
@@ -20,6 +21,7 @@
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
     "jshint-stylish": "^2.0.1",
+    "json-stringify": "^0.1.3",
     "jsonwebtoken": "^5.0.4",
     "karma": "^0.13.3",
     "karma-chai": "^0.1.0",
@@ -30,6 +32,7 @@
     "moment": "^2.10.6",
     "mongoose": "^4.0.4",
     "phantomjs": "^1.9.17",
+    "requestify": "^0.1.17",
     "socket.io": "^1.3.5",
     "stringify": "^3.1.0",
     "underscore": "^1.8.3"
