--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-jwt": "^3.0.1",
     "express-session": "^1.11.3",
     "express-socket.io-session": "^1.3.1",
+    "faker": "^3.0.1",
+    "firebase": "^2.2.9",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
     "gulp-less": "^3.0.3",
