--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,11 @@
     "angular-resource": "~1.4.3",
     "ngCordova": "~0.1.20-alpha",
     "angularfire": "~1.1.2",
-    "ionicons": "~2.0.1"
+    "ionicons": "~2.0.1",
+    "angular-carousel": "~0.3.13",
+    "angular-touch": "~1.4.5",
+    "angular-bootstrap-datetimepicker": "latest",
+    "angular-chart.js": "~0.8.1"
   },
   "install": {
     "path": "src/libs"
