--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
     "angular-carousel": "~0.3.13",
     "angular-touch": "~1.4.5",
     "angular-bootstrap-datetimepicker": "latest",
-    "angular-chart.js": "~0.8.1"
+    "angular-chart.js": "~0.8.1",
+    "ionic-timepicker": "~0.3.0",
+    "ionic-datepicker": "~0.9.0"
   },
   "install": {
     "path": "src/libs"
