--- a/bower.json
+++ b/bower.json
@@ -15,21 +15,22 @@
   ],
   "dependencies": {
     "angular": "1.4.3",
-    "angular-ui-router": "0.2.13",
     "angular-animate": "1.4.3",
-    "angular-sanitize": "1.4.3",
-    "ionic": "~1.0.1",
-    "angular-socket-io": "~0.7.0",
-    "angular-resource": "~1.4.3",
-    "ngCordova": "~0.1.20-alpha",
-    "angularfire": "~1.1.2",
-    "ionicons": "~2.0.1",
-    "angular-carousel": "~0.3.13",
-    "angular-touch": "~1.4.5",
     "angular-bootstrap-datetimepicker": "latest",
+    "angular-carousel": "~0.3.13",
     "angular-chart.js": "~0.8.1",
+    "angular-resource": "~1.4.3",
+    "angular-sanitize": "1.4.3",
+    "angular-socket-io": "~0.7.0",
+    "angular-touch": "~1.4.5",
+    "angular-ui-router": "0.2.13",
+    "angularfire": "~1.1.2",
+    "ionic": "~1.0.1",
+    "ionic-datepicker": "~0.9.0",
     "ionic-timepicker": "~0.3.0",
-    "ionic-datepicker": "~0.9.0"
+    "ionicons": "~2.0.1",
+    "ng-file-upload": "~7.0.17",
+    "ngCordova": "~0.1.20-alpha"
   },
   "install": {
     "path": "src/libs"
