--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.12.4",
     "browser-sync": "^2.8.2",
     "chai": "^3.2.0",
+    "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
@@ -18,6 +19,7 @@
     "express-session": "^1.11.3",
     "express-socket.io-session": "^1.3.1",
     "faker": "^3.0.1",
+    "fast-csv": "^0.6.0",
     "firebase": "^2.2.9",
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
@@ -32,7 +34,8 @@
     "method-override": "^2.3.3",
     "mocha": "^2.2.5",
     "moment": "^2.10.6",
-    "mongoose": "^4.0.4",
+    "mongoose": "~4.0.4",
+    "mongoose-auto-increment": "^4.0.0",
     "phantomjs": "^1.9.17",
     "requestify": "^0.1.17",
     "socket.io": "^1.3.5",
