--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.10.6",
     "mongoose": "~4.0.4",
     "mongoose-auto-increment": "^4.0.0",
+    "node-schedule": "^0.2.9",
     "phantomjs": "^1.9.17",
     "requestify": "^0.1.17",
     "socket.io": "^1.3.5",
